--- a/JrAkademiGameProject/Base.lproj/Main.storyboard
+++ b/JrAkademiGameProject/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aHK-bS-4TU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="419-ZH-SWv">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -8,55 +8,20 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
-        <scene sceneID="uUZ-WT-dY3">
+        <!--View Controller-->
+        <scene sceneID="4wK-w5-V96">
             <objects>
-                <viewController id="hGt-8g-LjR" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3sx-WX-dUi">
+                <viewController id="419-ZH-SWv" customClass="ViewController" customModule="JrAkademiGameProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xuW-xC-lmW">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="hJ3-ls-eEn"/>
+                        <viewLayoutGuide key="safeArea" id="dgz-d4-uG4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="NTH-2x-ql4"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Rqp-iw-J1a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eMe-rR-ETY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-76" y="333"/>
-        </scene>
-        <!--Item 1-->
-        <scene sceneID="xQd-Mi-BkH">
-            <objects>
-                <viewController id="a1b-D7-CGq" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="NqH-aY-Ilf">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="8on-Rn-LLJ"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="wJx-sI-wCi"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="uLc-95-yGY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-76" y="-274"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="OZb-3U-sBH">
-            <objects>
-                <tabBarController id="aHK-bS-4TU" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Mvq-qy-LHM">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="a1b-D7-CGq" kind="relationship" relationship="viewControllers" id="iPU-Dh-zBD"/>
-                        <segue destination="hGt-8g-LjR" kind="relationship" relationship="viewControllers" id="LVv-kV-VXa"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3cZ-5S-eq4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-979" y="30"/>
+            <point key="canvasLocation" x="-1645" y="-516"/>
         </scene>
     </scenes>
     <resources>
